# telegramfeed

./: .coverage  .coveragerc  .envrc.sample  .gitignore  .pre-commit-config.yaml  .prospector.yml  Makefile  README.md  SECURITY.md  alembic.ini  anyfeed.py  foo.py  pyproject.toml  send_articles.py  subscriptions_manager.py
.github/workflows/: ci.yaml  codeql-analysis.yml
alembic/versions/: 1fab66265d7f_create_subscriptions.py
telegramfeed/: __init__.py  telegramfeed.py
telegramfeed/article/: article.py
telegramfeed/container/: container.py
telegramfeed/entities/: __init__.py  subscription.py
telegramfeed/interfaces/: __init__.py  chat_interface.py
telegramfeed/newsfeed/: __init__.py  newsfeed.py
telegramfeed/repos/: subscriptionrepo.py
telegramfeed/repositories/: __init__.py  subscriptionrepo.py
telegramfeed/services/: __init__.py  allowlist_service.py  feed_downloader_service.py  feeder_service.py  newsfeed_service.py  subscription_service.py  subscriptionservice.py  telegram_service.py  telegramservice.py
telegramfeed/subscription/: __init__.py  subscription.py
telegramfeed/subscriptionmanager/: __init__.py  subscriptionmanager.py
telegramfeed/telegram/: __init__.py  telegram.py  user_message.py
tests/: test_allowlist_service.py  test_feed_downloader_service.py  test_feeder_service.py  test_subscription.py  test_subscription_service.py  test_subscriptionmanager.py  test_telegram.py
tests/fixtures/: container.py
