[tool.poetry]
name = "telegramfeed"
version = "0.1.0"
description = ""
authors = ["Alessandro Lorenzi <me@alorenzi.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.0"
requests = "^2.28.1"
feedparser = "^6.0.10"
dependency-injector = "^4.39.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
mock = "^4.0.3"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
safety = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
